--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
+    "@unhead/vue": "^1.11.13",
     "v-money": "^0.8.1",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
