--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@unhead/vue": "^1.11.13",
     "v-money": "^0.8.1",
     "vue": "^3.5.13",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.5.0",
     "vue-the-mask": "^0.11.1"
   },
