--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@phosphor-icons/vue": "^2.2.1",
     "@unhead/vue": "^1.11.13",
     "v-money": "^0.8.1",
@@ -24,6 +25,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
+    "unplugin-vue-router": "^0.10.9",
     "vite": "^6.0.1",
     "vite-ssg": "^0.24.2",
     "vue-tsc": "^2.1.10"
